--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,3 +8,7 @@ output:
 Click on this [orthogonal CV](miss_position.html) to see my example.
 
 Click on this [Questions on Algorithm](first-analysis.html) to see more details.
+
+### flash on the chipseq data from Kevin
+
+Click on this [three data sets on the 4500 rows chr1](sd_chr1_asinh.html) to see more details.
