--- a/analysis/sd_chr1_asinh.Rmd
+++ b/analysis/sd_chr1_asinh.Rmd
@@ -84,6 +84,9 @@ par(mfrow = c(2,3))
 for(i in 1:5) barplot(FL_NHLF$f[,i],names = colnames(HUVEC)[1:9],main = paste("factor",i,"NHLF"),las = 2,cex.names = 0.6)
 ```
 
+## HUVEC
+
+there is problem on ashr package 2.0.3
 
 ## Session Information
 
