--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -19,19 +19,9 @@ Click on this [Questions on Algorithm](first-analysis.html) to see more details.
 
 Click on this [three data sets on the 4500 rows chr1 var_col](sd_chr1_asinh.html) to see more details.
 
-### data analysis on the normalized data
-
-#### missing data imputation
-
-#### gene expression data
-
-### further issues
-
-#### NMF
-
-#### tensor flash
 
 
+[ns](draft.html) 
 
 
 
